# test-coverage-devin-demo

./: .gitignore  COVERAGE_ANALYSIS.md  README.md  REFACTOR_SUMMARY.md  coverage.txt  coverage_new.txt  coverage_phase1.txt  coverage_phase1_final.txt  coverage_phase2.txt  coverage_phase2_final.txt  coverage_phase3.txt  coverage_phase3_final.txt  main.py  pyproject.toml
api/: __init__.py  server.py
ingestion/: __init__.py  packet.py  receiver.py
processors/: __init__.py  milestone_processor.py  state_machine.py
status/: __init__.py  aggregator.py  readiness.py
tests/: test_utils.py
tests/api/: test_server.py  test_server_basic.py  test_server_integration.py  test_status_api.py  test_status_api_phase3.py
tests/ingestion/: test_buffer_eviction.py  test_packet.py  test_packet_phase3.py  test_packet_validation.py  test_packet_validation_edges.py  test_receiver.py  test_receiver_async_and_ordering.py  test_receiver_async_failures.py  test_receiver_buffer.py  test_receiver_phase2.py  test_receiver_stats.py  test_sequence.py  test_sequence_gap_helpers.py
tests/processors/: test_failed_and_metrics_exclusion.py  test_milestone_failures_and_unknown.py  test_milestone_processor.py  test_milestone_processor_phase1.py  test_milestone_processor_phase3.py  test_milestone_progress_promotion.py  test_progress_and_metrics.py  test_state_machine.py
tests/status/: test_aggregator.py  test_readiness.py  test_readiness_critical_vs_noncritical.py  test_readiness_edges.py  test_readiness_phase3.py
